--- a/INDEX.html
+++ b/INDEX.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INSTITUTO CERTUS</title>
+    <title> INSTITUTO CERTUS </title>
 </head>
 <body>
-    Hola mundo
+
+    <br>
+    <h1>    INFORMACION DEL CURSO </h1>
+
+    <h2> bienvenidos </h2>
+    
+    <p > Curso : Lenguaje de desarrollo y soporte de sistemas </p>
+
 </body>
 </html>
