--- a/INDEX.html
+++ b/INDEX.html
@@ -8,11 +8,14 @@
 <body>
 
     <br>
+
     <h1>    INFORMACION DEL CURSO </h1>
 
     <h2> bienvenidos </h2>
     
     <p > Curso : Lenguaje de desarrollo y soporte de sistemas </p>
-
+    <!-- stage changed sirve para preparar el cambio en desktop 
+     y commut para confirmar el cambio en desktop   -->
+    
 </body>
 </html>
