--- a/INDEX.html
+++ b/INDEX.html
@@ -16,6 +16,8 @@
     <p > Curso : Lenguaje de desarrollo y soporte de sistemas </p>
     <!-- stage changed sirve para preparar el cambio en desktop 
      y commut para confirmar el cambio en desktop   -->
+
+     <h1> ESTA VERSION ES DE LA RAMA S1 </h1>
     
 </body>
 </html>
